--- a/backend/.editorconfig
+++ b/backend/.editorconfig
@@ -3,8 +3,8 @@ root = true
 [*]
 charset = utf-8
 indent_style = tab
-end_of_line = crlf
-trim_trailing_whitespace = false
+end_of_line = lf
+trim_trailing_whitespace = true
 insert_final_newline = false
 indent_size = 4
 
