PSY-53: start creating separate appsetting env files

--- a/backend/Configuration/appsettings.Production.json
+++ b/backend/Configuration/appsettings.Production.json
@@ -7,15 +7,12 @@
     }
   },
   "ConnectionStrings": {
-    "MySqlConn": "server=localhost;port=3306;database=medical_scheduling;user=root;password=password;"
+    "MySqlConn": "Server=db;Port=3306;Database=psycalldb;User=psycalluser;Password=psycallpass;"
   },
-  "AllowedHosts": "*",
+  "AllowedHosts": "https://backend.psycall.net",
   "Cors": {
     "AllowedOrigins": [
-      "https://psycall.net",
-      "https://www.psycall.net",
-      "http://localhost:3000",
-      "http://localhost:3001"
+      "https://psycall.net"
     ]
   }
 }
