--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,9 @@ services:
     image: mysql:8.0
     container_name: psycall-db
     restart: always
+    command: --default-authentication-plugin=mysql_native_password
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: psycalldb
       MYSQL_USER: psycalluser
       MYSQL_PASSWORD: psycallpass
@@ -12,28 +13,32 @@ services:
       - "3308:3306"
     volumes:
       - db_data:/var/lib/mysql
-      - ./:/docker-entrypoint-initdb.d
+      - ./psycall_prod_dump.sql:/docker-entrypoint-initdb.d/psycall_prod_dump.sql:ro
 
   backend:
-    build: ./backend
+    build:
+      context: ./backend
     container_name: psycall-backend
     restart: always
-    environment:
-      DB_CONNECTION_STRING: "Server=db;Port=3306;Database=psycalldb;User=psycalluser;Password=psycallpass;"
-
-      SEED: "true"
-      ASPNETCORE_ENVIRONMENT: "Development"
     depends_on:
       - db
+    environment:
+      ASPNETCORE_ENVIRONMENT: Production
+      ASPNETCORE_URLS: "http://0.0.0.0:5109"
+      ConnectionStrings__DefaultConnection: "Server=db;Port=3306;Database=psycalldb;User=psycalluser;Password=psycallpass;"
     ports:
-      - "5109:5109"  
+      - "5109:5109"
 
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
     container_name: psycall-frontend
     restart: always
     depends_on:
       - backend
+    environment:
+      NODE_ENV: production
+      NEXT_PUBLIC_API_URL: "http://backend:5109"
     ports:
       - "3000:3000"
 
