--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,21 @@ services:
     volumes:
       - db_data:/var/lib/mysql
       - ./:/docker-entrypoint-initdb.d
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "mysqladmin",
+          "ping",
+          "-h",
+          "localhost",
+          "-uroot",
+          "-p$MYSQL_ROOT_PASSWORD",
+        ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
   backend:
     build: ./backend
@@ -24,9 +39,10 @@ services:
       SEED: "true"
       ASPNETCORE_ENVIRONMENT: "Development"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     ports:
-      - "5109:5109"  
+      - "5109:5109"
 
   frontend:
     build: ./frontend
