PSY-2-33: rough version of one PGY1 and one PGY2 on saturdays

--- a/backend/Properties/launchSettings.json
+++ b/backend/Properties/launchSettings.json
@@ -16,7 +16,7 @@
       "applicationUrl": "http://localhost:5109",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "DB_CONNECTION_STRING": "Server=YOUR_SERVER;Port=YOUR_PORT;Database=YOUR_DB;User=YOUR_USER;Password=YOUR_PASSWORD;"
+        "DB_CONNECTION_STRING": "Server=localhost;Port=3308;Database=psycalldb;User=psycalluser;Password=psycallpass;"
       }
     },
     "https": {
