--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -3,12 +3,12 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Infrastructure": "Warning",
       "Microsoft.EntityFrameworkCore.Database.*": "Warning"
     },
     "Console": {
       "FormatterName": "simple",
       "FormatterOptions": {
-        "SingleLine": true,
         "TimestampFormat": "MM/dd/yyyy HH:mm:ss "
       }
     }
