--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,16 +2,16 @@ FROM mcr.microsoft.com/dotnet/sdk:10.0 AS build
 WORKDIR /app
 
 
-COPY . .
+COPY MedicalDemo.csproj ./
 RUN dotnet restore
-RUN dotnet publish -c Release -o out
 
+
+COPY . .
+RUN dotnet publish -c Release -o out
 
 FROM mcr.microsoft.com/dotnet/aspnet:10.0
 WORKDIR /app
 COPY --from=build /app/out .
 
-
 EXPOSE 5109
-
 ENTRYPOINT ["dotnet", "MedicalDemo.dll"]
