--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,12 @@
 FROM mcr.microsoft.com/dotnet/sdk:10.0 AS build
 WORKDIR /app
 
-
+COPY MedicalDemo.sln ./
 COPY MedicalDemo.csproj ./
-RUN dotnet restore
-
+RUN dotnet restore MedicalDemo.sln
 
 COPY . .
-RUN dotnet publish -c Release -o out
+RUN dotnet publish MedicalDemo.sln -c Release -o out --no-restore
 
 FROM mcr.microsoft.com/dotnet/aspnet:10.0
 WORKDIR /app
