PSY-74: integrate NLog and Sentry

--- a/backend/Configuration/appsettings.Development.json
+++ b/backend/Configuration/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySqlConn": "server=localhost;port=3306;database=medical_scheduling;user=root;password=password;"
+    "MySqlConn": "Server=localhost;Port=3308;Database=psycalldb;User=psycalluser;Password=psycallpass;"
   },
   "Cors": {
     "AllowedOrigins": [
