G23-81: Add rotation types table and change rotations table to use the newly added rotation types

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -15,12 +15,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySqlConn": "server=YOUR_SERVER;port=YOUR_PORT;database=YOUR_DATABASE;user=YOUR_USER;password=YOUR_PASSWORD;"
+    "MySqlConn": "server=localhost;port=3308;database=medical_scheduling;user=root;password=password;"
   },
   "Cors": {
-    "AllowedOrigins": [
-      "https://psycall.net",
-      "https://www.psycall.net"
-    ]
+    "AllowedOrigins": ["https://psycall.net", "https://www.psycall.net"]
   }
 }
