--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySqlConn": "server=localhost;port=3306;database=medical_scheduling;user=root;password=password;"
+    "MySqlConn": "server=localhost;port=3308;database=psycalldb;User=psycalluser;Password=psycallpass;"
   },
   "Cors": {
     "AllowedOrigins": [
