--- a/backend/Configuration/appsettings.json
+++ b/backend/Configuration/appsettings.json
@@ -19,5 +19,7 @@
       "https://www.psycall.net"
     ]
   },
-  "SentryDsn": "https://9caecf8386c61602e4104b04f22856c4@o4510694230392832.ingest.us.sentry.io/4510694235570176"
+  "Sentry": {
+    "Dsn": "https://9caecf8386c61602e4104b04f22856c4@o4510694230392832.ingest.us.sentry.io/4510694235570176"
+  }
 }
