--- a/backend/.editorconfig
+++ b/backend/.editorconfig
@@ -18,6 +18,9 @@ dotnet_style_parentheses_in_other_binary_operators = never_if_unnecessary:none
 dotnet_style_parentheses_in_other_operators = never_if_unnecessary:none
 dotnet_style_parentheses_in_relational_binary_operators = never_if_unnecessary:none
 
+# Namespaces should be file scoped
+dotnet_style_namespace_declarations = file_scoped:suggestion
+
 # Field preferences
 dotnet_style_readonly_field = true:warning
 
