--- a/backend/Properties/launchSettings.json
+++ b/backend/Properties/launchSettings.json
@@ -15,8 +15,7 @@
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5109",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "DB_CONNECTION_STRING": "Server=localhost;Port=3308;Database=psycalldb;User=psycalluser;Password=psycallpass;"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "https": {
