--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
     container_name: psycall-backend
     restart: always
     environment:
+      DB_CONNECTION_STRING: "Server=db;Port=3306;Database=psycalldb;User=psycalluser;Password=psycallpass;"
       ASPNETCORE_ENVIRONMENT: "Development"
     depends_on:
       db:
