--- a/backend/Configuration/appsettings.Development.json
+++ b/backend/Configuration/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySqlConn": "Server=localhost;Port=3308;Database=psycalldb;User=psycalluser;Password=psycallpass;"
+    "MySqlConn": "Server=db;Port=3306;Database=psycalldb;User=psycalluser;Password=psycallpass;"
   },
   "Cors": {
     "AllowedOrigins": [
